Additional Thailand fields for date and place of partner's death.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -22,12 +22,17 @@ thailandAffirmationReferee2Postcode=referee2postcode
 thailandAffirmationReferee2Country=referee2country
 thailandAffirmationRegistrationDate=marriagedate
 thailandAffirmationRegistrationProvince=marriageprovince
+thailandAffirmationStatusLatePartnerDateOfDeath=deathcertificatedateofissue
+thailandAffirmationStatusLatePartnerPlaceOfDeath=deathcertificateplaceofissue
+
 notarialDeclaration=declaration
 notarialConsentMethodOfContact=#{get('contactpreference')?:'Not set'}
+
 franceMarriageFullNameAtBirth=firstname,middlename,surname
 franceMarriageTownOfBirth=placeofbirth
 franceMarriageCountryOfBirth=countryofbirth
 franceMarriageMaritalStatus=#{get('maritalstatusnow')?:'Single'}
+
 francePacsFullNameAtBirth=firstname,middlename,surname
 francePacsTownOfBirth=placeofbirth
 francePacsCountryOfBirth=countryofbirth
